[package]
name = "sxeme"
version = "0.1.0"
edition = "2021"
author = ["evanmdrake@icloud.com"]
description = "Scheme (r7rs) based compiler"
documentation = "https://small.r7rs.org/attachment/r7rs.pdf"
readme = "README.md"
repository = ""
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
