[package]
name = "sxeme"
version = "0.1.5"
edition = "2021"
authors = ["Evan Drake <evanmdrake@icloud.com>"]
description = "Scheme (r7rs) based compiler"
documentation = "https://small.r7rs.org/attachment/r7rs.pdf"
readme = "README.md"
repository = "https://github.com/snowmang1/sxeme.git"
license = "MIT"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
